# Tiga

./: .gitignore  .pre-commit-config.yaml  README.md  README_AGENT.md  README_ARCH.md  agent_prompt.json  check_backend_db_direct.py  check_db.py  check_llm.py  debug_crawler.py  debug_qa.py  design_tokens.json  docker-compose.yml  extract_prompt.py  findings.md  graph.MD  inspect_prompts.py  mock_db_script.py  progress.md  recorder_v5.db  regex_test.py  repro_error.py  task_plan.md  tatus
backend/: .coverage  .env example  .gitignore  Dockerfile  Makefile  README.md  audit_duplicates.py  audit_report.md  check_db_error.py  check_db_internal.py  check_db_model.py  check_imports.py  check_kb_status.py  check_key_consistency.py  check_models.py  debug_lightrag.py  debug_routes.py  debug_routes_v2.py  device_key.pem  fix_db_schema.py  init_db.py  logging_config.yaml  migrate_db.py  package-lock.json  package.json  probe_openclaw.py  pyproject.toml  recorder.db  recorder_v2.db  recorder_v3.db  recorder_v4.db  recorder_v5.db  repro_delete.py  requirements.txt  scan_comments.py  seed_agents.py  seed_services.py  test_import.py  test_openclaw_http.py  vanna_config.json
backend/app/: main.py
backend/docs/: README.md  agno_integration_checklist.md  api_contract.md  architecture.md  cleanup_report.md  deployment.md  dispatch_sequence.puml  implementation.md  openclaw_task_optimization_summary.md  performance_benchmark.md  sandbox_test_scheme.md  task_mode_api.md  testing.md  todo.md  workflow.md
backend/prompts/: qa_system.md
backend/sandbox/: Dockerfile
(+2091 files in other folders)
